Add logging to AfadApiClient for earthquake event data fetching
- Added info logs to track the request URL and response data from AFAD API.
- Added error logging in case of API request failures.
- Included warning log when no earthquake data is returned from the API.